DOG FOOD 2: BACK WITH A VENGANCE (fix sonic 2)

--- a/moistkriticalwouldliketoshowyousomething/sonic-2.html
+++ b/moistkriticalwouldliketoshowyousomething/sonic-2.html
@@ -22,7 +22,7 @@
 	poster="https://bako.is-ne.at/67ZzH10Cz.png"
 	data-setup="{}"
 >
-	<source src="https://edytjedhgmdhm.abfhaqrhbnf.workers.dev/movies/Sonic%20the%20Hedgehog%202%20%282022%29/Sonic.the.Hedgehog.2.2022.1080p.BluRay.x264-OFT.mkv" type="video/x-matroska" />
+	<source src="https://edytjedhgmdhm.abfhaqrhbnf.workers.dev/movies/Sonic%20the%20Hedgehog%202%20%282022%29/Sonic.the.Hedgehog.2.2022.1080p.BluRay.x264-OFT.mkv" type="video/webm" />
 	<p class="vjs-no-js">
 		To view this video please enable JavaScript, and consider upgrading to a
 		    web browser that
